[tool.poetry]
name = "qiskit-iceberg-transpiler"
version = "0.1.0"
description = "Qiskit transpiler to convert logical circuits to physical circuits using the [[k+2, k, 2]] Iceberg code"
authors = ["Jim Furches <jfurches@gatech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qiskit = "^1.2.0"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
qiskit-aer = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
